upload/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: upload
  labels:
    app: kubed
