upload/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-svc
  namespace: upload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-svc
  template:
    metadata:
      labels:
        app: upload-svc
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: upload-server
          image: registry.gitlab.com/goatlab/corporate/moutain/mountain/goat-upload:0.1
          imagePullPolicy: Always
          ports:
            - name: upload-port
              containerPort: 4100
---
apiVersion: v1
kind: Service
metadata:
  name: upload-svc
  namespace: upload
  labels:
    app: upload-svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 4100
      protocol: TCP
      name: upload-http
  selector:
    app: upload-svc
