upload/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: upload
  namespace: upload
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - upload.goatlab.dev
      secretName: letsencrypt-clouddns
  rules:
    - host: upload.goatlab.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: upload-svc
              servicePort: 80
